[package]
name = "codelldb"
version = "1.0.0"
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]
edition = "2018"

[dependencies]
raw_debug_protocol = { package = "debug-protocol", path = "deps/debug-protocol" }
lldb = { path = "deps/lldb" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
env_logger = "0.6"
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
regex = "1.1"
superslice = "1.0"
lazy_static = "1.3"
clap = "2.33"
crossterm = "0.9"
libc = "0.2"
cpython = { version = "0.2", default-features = false }

[features]
default = ["python2"]
python2 = ["cpython/python27-sys"]
python3 = ["cpython/python3-sys"]

[lib]
crate-type = ["cdylib"]
